# SadeemApp

EmbeddedSystem/: Cargo.toml  diagram.json  libraries.txt  platformio.ini  rust.html  wokwi-project.txt
EmbeddedSystem/src/: main.rs  sketch.ino
backend/: .env  Dockerfile  app.yaml  deployment.yaml  focal-rampart-437408-f7-69a5df5ce924.json  go.mod  go.sum
backend/certs/: client-cert.pem  client-key.pem  server-ca.pem
backend/cmd/api/: carthandler.go  cartitem.go  errors.go  main.go  middleware.go  orderhandler.go  router.go  tablecontroller.go  usercontroller.go  vendorcontroller.go
backend/internal/data/: cart.go  cartItem.go  items.go  model.go  table.go  user.go  user_roles.go  vendoradmin.go
backend/internal/migrations/: 000001_create_users_table.up.sql
backend/utils/: utils.go
backend/utils/validator/: validator.go
vendors/: pubspec.yaml
vendors/android/app/: build.gradle
vendors/ios/Runner.xcodeproj/: project.pbxproj
vendors/lib/: main.dart
vendors/lib/app/: app.dart  app.router.dart
vendors/lib/models/: cart.dart  cartitems.dart  item.dart  order.dart  table.dart  user.dart  vendor.dart
vendors/lib/services/: VendorDetailsService.dart  auth_service.dart  cartService.dart  orderserivce.dart  profileservice.dart  vendorservices.dart
vendors/lib/ui/views/cart/: CartView.dart  (+1 more)
vendors/lib/widgets/: loading_widget.dart  paginationControl.dart  searchfield.dart
vendors/linux/: CMakeLists.txt  my_application.cc
vendors/macos/Runner.xcodeproj/: project.pbxproj
vendors/macos/Runner/Configs/: AppInfo.xcconfig
vendors/web/: index.html
(+20 files in other folders)
